fix alignment on projects page with different content, #63
reduce pubs on connectomes

--- a/source/css/styles.14.css
+++ b/source/css/styles.14.css
@@ -1608,7 +1608,8 @@ footer.dark,
 
 .tools-pubs .col {
     text-align: left;
-    padding: 15px;
+    padding-top: 15px;
+    margin-right: 5px;
     flex: 1;
 }
 
